--- a/jQuery/DOM Manipulation/css/style.css
+++ b/jQuery/DOM Manipulation/css/style.css
@@ -3,34 +3,16 @@ body {
 	background-color: #9B50AF;
 }
 
-#add-container {
+#container {
 	margin-top: 50px;
-	margin-bottom: 80px;
 	margin-left: 30px; 
-}
-
-#places-container {
-	margin-left: 30px;
-}
-
-
-.item {
-	width: 150px;
-	margin: 10px;
 	background-color: #3BEAB4;
-	padding: 10px;
+	width: 160px;
+	padding: 20px;
+	height: 80px;
 }
 
-.remove {
-	width: 15px;
-	float: right;
-	color: red;
-}
-
-button {
-	background-color: #F09306;
-	color: white;
+strong {
 	font-weight: bold;
-	border:none;
-	padding: 5px;
+	font-size: 20px;
 }
